--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
           command: ./tests/ci/scripts/post-install-test.sh
       - run:
           name: Run Integration Tests
-          commmand: ./tests/integration_tests/runtests.sh --junit-output-dir ~/phpunit
+          command: ./tests/integration_tests/runtests.sh --junit-output-dir ~/phpunit
       - run:
           name: Run UI Tests
           command: $XDMOD_SRC_DIR/tests/ui/runtests.sh --headless --log-junit ~/phpunit
