Updating the mongodb library version.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "sporritt/jsplumb-jquery-min-file": "^1.6.3"
+        "sporritt/jsplumb-jquery-min-file": "^1.6.3",
+        "mongodb/mongodb": "^1.1"
     },
     "repositories": [
         {
