- Updated composer.json to inclue some autoloading. This doesn't have an     effect on the installted module, but it makes working with the module     a little bit easier w/ an IDE.   - Removed `configuration/rest.d/*.json` as they are no longer needed.   - Moved `html/internal_dashboard/supremm/css|js` to     `html/gui/css/dashboard/supremm/css|js`.   - Migrated `classes/Rest/Controllers/*.php` to `src/Controller`   - Migrated `html/internal_dashboard/supremm/stats.php` to     `src/Controller/StatsController.php` and added a new twig template     `templates/twig/stats.html.twig`.   - Removed `html/internal_dashboard/supremm/user_check.php` as it's no     longer needed.

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,12 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "DataWarehouse\\": "classes/DataWarehouse/",
+            "OpenXdmod\\": "classes/OpenXdmod/",
+            "CCR\\": "src/"
+        }
     }
 }
